--- a/trunk/cv/cv.tex
+++ b/trunk/cv/cv.tex
@@ -176,7 +176,7 @@
 \begin{document}
 \makeheading{Fábio Markus N. Miranda}
 
-\section{Informações de Contato}
+\section{Informações para contato}
 %
 % NOTE: Mind where the & separators and \\ breaks are in the following
 %       table.
@@ -288,7 +288,7 @@ Português (nativo), inglês (fluente), espanhol (básico).
 \item Linguagens de Shader: GLSL, Cg.
 \item APIs Gráficas: OpenGL, DirectX.
 \item Arquiteturas, Frameworks e \emph{Engines}: CUDA, XNA, Panda3D, Torque, PyODE.
-\item Conhecimentos em computação gráfica:
+\item SGBD: MySQL.
 
 \end{outerlist}
 \end{document}
