--- a/trunk/cv/cv.tex
+++ b/trunk/cv/cv.tex
@@ -227,7 +227,7 @@ Belo Horizonte, MG
 \end{innerlist}
 
 \item[] \textit{Estrada Real Digital - Bolsista FINEP}%
-        \hfill \textbf{Maio de 2005 até Março de 2009}
+        \hfill \textbf{Maio de 2007 até Março de 2009}
 \begin{innerlist}
 \item Desenvolvimento de um jogo de aventura 3D com temas históricos.
 \item Grande experiência ganha com o contato com outras áreas envolvidas no desenvolvimento do jogo, como história e arte/\emph{design}.
@@ -235,10 +235,10 @@ Belo Horizonte, MG
 \item Desenvolvimento de uma plataforma para a edição do jogo (Pandorga).
 \end{innerlist}
 
-\item[] \textit{Sistema para geração procedural de terrenos na GPU}%
+\item[] \textit{Sistema para geração procedural de terrenos pseudo infinitos na GPU}%
         \hfill \textbf{Junho de 2008 até Junho de 2009}
 \begin{innerlist}
-\item Desenvolvimento de um sistema para geração procedural de terrenos na GPU.
+\item Desenvolvimento de um sistema para geração procedural de terrenos pseudo infinitos na GPU, utilizando \emph{Shaders} e \emph{Framebuffers} (FBO).
 \item Escalonamento da geração procedural para a GPU ou CPU, dependendo do nível de ociosidade de cada um.
 \item Utilização de OpenGL e GLSL.
 \end{innerlist}
@@ -255,6 +255,9 @@ MIRANDA, F. M. ; LAFETA, P. ; ANDRADE, Leonardo Queiroz de ; CORDEIRO, Carlúcio 
 \item Melhor artigo resumido: "Pandorga: Uma plataforma open source para a criação e desenvolvimento de jogos", SBGames 2008 - Trilha de Computação, Sociedade Brasileira de Computação.
 
 \item 2º Colocado Concurso XNA - SBGames 2008: Chameleon
+\begin{innerlist}
+\item O \emph{game} foi posteriormente adaptado para executar no console \emph{Xbox 360}, utilizando as \emph{threads} disponíveis no console.
+\end{innerlist}
 
 \end{outerlist}
 
