--- a/trunk/cv/cv.tex
+++ b/trunk/cv/cv.tex
@@ -221,29 +221,35 @@ Belo Horizonte, MG
 \href{http://www.ufmg.br/}{\textbf{Universidade Federal de Minas Gerais}}
 \begin{outerlist}
 \item[] \textit{PELD/ICB - Bolsista CNPq}%
-        \hfill \textbf{Fevereiro de 2006 até Fevereiro de 2007}
+        \hfill \newline \textbf{Fevereiro de 2006 até Fevereiro de 2007}
 \begin{innerlist}
 \item Desenvolvimento e suporte de um sistema de banco de dados de informações biológicas.
 \end{innerlist}
 
 \item[] \textit{Estrada Real Digital - Bolsista FINEP}%
-        \hfill \textbf{Maio de 2007 até Março de 2009}
+        \hfill \newline \textbf{Maio de 2007 até Março de 2009}
 \begin{innerlist}
 \item Desenvolvimento de um jogo de aventura 3D com temas históricos.
 \item Grande experiência ganha com o contato com outras áreas envolvidas no desenvolvimento do jogo, como história e arte/\emph{design}.
 \item Implementação de um sistemas de sombras em tempo-real, utilizando GPU, para a \emph{engine} Panda3D, baseado no \emph{Parallel-Split Shadow Maps}.
 \item Desenvolvimento de uma plataforma para a edição do jogo (Pandorga).
+\item Orientador: Prof. Luiz Chaimowicz
 \end{innerlist}
 
-\item[] \textit{Sistema para geração procedural de terrenos pseudo infinitos na GPU}%
-        \hfill \textbf{Junho de 2008 até Junho de 2009}
+\item[] \textit{Sistema para geração procedural de terrenos pseudo infinitos na GPU (Trabalho de Conclusão de Curso)}%
+        \hfill \newline \textbf{Junho de 2008 até Junho de 2009}
 \begin{innerlist}
 \item Desenvolvimento de um sistema para geração procedural de terrenos pseudo infinitos na GPU, utilizando \emph{Shaders} e \emph{Framebuffers} (FBO).
 \item Escalonamento da geração procedural para a GPU ou CPU, dependendo do nível de ociosidade de cada um.
 \item Utilização de OpenGL e GLSL.
+\item Orientador: Prof. Luiz Chaimowicz
 \end{innerlist}
 
 \end{outerlist}
+
+
+\newpage
+
 
 \section{Publicações}
 %
@@ -288,10 +294,10 @@ Português (nativo), inglês (fluente), espanhol (básico).
 \section{Conhecimentos Técnicos} 
 \begin{outerlist}
 \item Linguagens de Programação: C, C++, Python, C\#, GLSL, HLSL, Cg, Java, Javascript, PHP.
+\item Banco de dados: MySQL.
 \item Linguagens de Shader: GLSL, Cg.
 \item APIs Gráficas: OpenGL, DirectX.
 \item Arquiteturas, Frameworks e \emph{Engines}: CUDA, XNA, Panda3D, Torque, PyODE.
-\item SGBD: MySQL.
 
 \end{outerlist}
 \end{document}
