--- a/trunk/paper/contribuicoes.tex
+++ b/trunk/paper/contribuicoes.tex
@@ -1,1 +1,9 @@
 \section{Contribuições}
+\label{contribuicoes}
+
+O trabalho apresentado aqui busca atingir os seguintes objetivos:
+
+\begin{itemize}
+	\item Propor uma plataforma de geração procedural de terrenos que faça uso tanto da CPU quanto da GPU, de forma a não deixar 
+	\item Fazer um estudo quanto aos benefícios da geração procedural na CPU, na GPU, e em uma arquitetura heterogênea GPU/CPU.
+\end{itemize}
