--- a/trunk/paper/paper.bib
+++ b/trunk/paper/paper.bib
@@ -13,4 +13,62 @@
   isbn      = {978-0-7695-3358-2},
 }
 
+ @book{proceduralApproach,
+	 author = {David S. Ebert and F. Kenton Musgrave and Darwyn Peachey and Ken Perlin and Steven Worley},
+	 title = {Texturing and Modeling: A Procedural Approach},
+	 year = {2002},
+	 isbn = {1558608486},
+	 publisher = {Morgan Kaufmann Publishers Inc.},
+	 address = {San Francisco, CA, USA},
+ }
+ 
+ @article{perlinNoise,
+	 author = {Perlin, Ken},
+	 title = {An image synthesizer},
+	 journal = {SIGGRAPH Comput. Graph.},
+	 volume = {19},
+	 number = {3},
+	 year = {1985},
+	 issn = {0097-8930},
+	 pages = {287--296},
+	 doi = {http://doi.acm.org/10.1145/325165.325247},
+	 publisher = {ACM},
+	 address = {New York, NY, USA},
+ }
+ 
+ @incollection{improvedPerlinNoise,
+	author = {Perlin, Ken},
+	booktitle = {GPU Gems},
+	chapter = {13},
+	citeulike-article-id = {3156793},
+	editor = {Fernando, Randima},
+	month = {March},
+	posted-at = {2008-08-26 18:48:59},
+	priority = {2},
+	publisher = {Addison Wesley Professional},
+	title = {Implementing Improved Perlin Noise},
+	year = {2004}
+}
+
+@INBOOK{generatingComplex,
+	author = {Ryan Geiss},
+	publisher = {Addison-Wesley Professional},
+	title = {GPU Gems 3},
+	chapter = {1 Generating Complex Procedural Terrains Using the GPU},
+	year = {2007},
+	pages = {7--37}
+}
+
+@InProceedings{Schneider:2006:FractalTerrain,
+  author =       "Jens Schneider and Tobias Boldte and Ruediger Westermann",
+  title =        "Real-Time Editing, Synthesis, and Rendering of Infinite Landscapes on {GPU}s",
+  booktitle =    "Vision, Modeling and Visualization 2006",
+  year =         "2006"
+}
+
+@misc{timerQuery,
+	title = "GL\_EXT\_timer\_query",
+	url = "http://www.opengl.org/registry/specs/EXT/timer\_query.txt",
+	urlaccessdate = "25 jun. 2009",
+}
 
