--- a/trunk/paper/proposta.tex
+++ b/trunk/paper/proposta.tex
@@ -10,7 +10,10 @@ O terreno geral é dividido em terrenos menores (chamados \emph{patchs}), como mo
 
 Considerando o usuário inicialmente localizado no \emph{patch} central, ao mover-se para um \emph{patch} vizinho, o sistema irá requisitar a geraçaõ de novos \emph{patchs}, vizinhos a aqueles que estão na borda do grid. O número de vizinhos gerados, bem como a quantidade de vizinhos do \emph{patch} central são variáveis do sistema, podendo ser adaptadas, pelo usuário, de acordo com o poder de processamento de sua máquina.
 
-Para garantir uma visualização fluida do terreno, minimizando as interrupções com a geração, o sistema proposto decide qual arquitetura (GPU ou CPU) será utilizada na geração dos \emph{patchs}. Considerando \textbf{n} a porcentagem de \emph{patchs} gerados na GPU e \textbf{1 - n} a porcentagem gerado na CPU, no início do sistema, teremos que \textbf{n = m = 0.5}. O aumento da carga para determinada arquitetura será decidida ao longo da execução do jogo, considerando um histórico de frames por segundo.
+Para garantir uma visualização fluida do terreno, minimizando as interrupções com a geração, o sistema proposto decide qual arquitetura (GPU ou CPU) será utilizada na geração dos \emph{patchs}. A variação da carga entre a CPU e a GPU levará em consideração a média do tempo gasto com a iteração pelo \emph{callback} do sistema proposto do \emph{frame} imediatamente anterior à requisição de geração e o \emph{frame} imediatamente posterior.
+
+
+%Considerando \textbf{n} a porcentagem de \emph{patchs} gerados na GPU e \textbf{1 - n} a porcentagem gerado na CPU, no início do sistema, teremos que \textbf{n = m = 0.5}. O aumento da carga para determinada arquitetura será decidida ao longo da execução do jogo, considerando um histórico de frames por segundo.
 
 
 Tal métrica foi escolhida pelas seguintes razões:
@@ -18,5 +21,6 @@ Tal métrica foi escolhida pelas seguintes razões:
 \begin{itemize}
 	\item Obter um FPS mais fluido durante a navegação é um dos principais objetivos deste trabalho.
 	\item A mesurização do tempo gasto com trabalho relacionado à parte gráfica utilizando OpenGL não é algo disponível em GPUs. A extensão \textbf{GL\_EXT\_timer\_query} \cite{timerQuery}, por exemplo, só está disponível em placas NVidia, algo que anularia a possibilidade da execução deste trabalho em placas ATI.
+	\item A utilização de chamadas como \textbf{glFlush()} para medir o tempo de renderização poderia prejudicar a performance do sistema.
 \end{itemize}
 
