--- a/trunk/paper/paper.bib
+++ b/trunk/paper/paper.bib
@@ -72,3 +72,9 @@
 	urlaccessdate = "25 jun. 2009",
 }
 
+@misc{nvFence,
+	title = "GL\_NV\_fence",
+	url = "http://www.opengl.org/registry/specs/NV/fence.txt",
+	urlaccessdate = "25 jun. 2009",
+}
+
