--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -356,7 +356,7 @@
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
 %\title{Bare Demo of IEEEtran.cls for IEEECS Conferences / adapted for Sibgrapi 2009}
-\title{Um Escalonador para Geração Procedural de Terrenos Pseudo-Infinitos em Tempo-Real Utilizando Arquiteturas Heterogêneas GPU/CPU}
+\title{Geração Procedural de Terrenos Pseudo-Infinitos em Tempo-Real Utilizando Arquiteturas GPU/CPU}
 
 %------------------------------------------------------------------------- 
 % change the % on next lines to produce the final camera-ready version 
