--- a/trunk/paper/proposta.tex
+++ b/trunk/paper/proposta.tex
@@ -10,17 +10,55 @@ O terreno geral é dividido em terrenos menores (chamados \emph{patchs}), como mo
 
 Considerando o usuário inicialmente localizado no \emph{patch} central, ao mover-se para um \emph{patch} vizinho, o sistema irá requisitar a geraçaõ de novos \emph{patchs}, vizinhos a aqueles que estão na borda do grid. O número de vizinhos gerados, bem como a quantidade de vizinhos do \emph{patch} central são variáveis do sistema, podendo ser adaptadas, pelo usuário, de acordo com o poder de processamento de sua máquina.
 
-Para garantir uma visualização fluida do terreno, minimizando as interrupções com a geração, o sistema proposto decide qual arquitetura (GPU ou CPU) será utilizada na geração dos \emph{patchs}. A variação da carga entre a CPU e a GPU levará em consideração a média do tempo gasto com a iteração pelo \emph{callback} do sistema proposto do \emph{frame} imediatamente anterior à requisição de geração e o \emph{frame} imediatamente posterior.
+Para garantir uma visualização fluida do terreno, minimizando as interrupções com a geração, o sistema proposto decidirá qual arquitetura (GPU ou CPU) será utilizada na geração dos \emph{patchs} a partir de uma variável $\alpha$, que representa a porcentagem de gerações que ocorrerão na \emph{GPU}. \textbf{1 - $\alpha$} representará, portanto a porcentagem de gerações na \emph{CPU}.
+
+A Figura \ref{fig:geracao} mostra como se dá o fluxo de geração.
 
 
-%Considerando \textbf{n} a porcentagem de \emph{patchs} gerados na GPU e \textbf{1 - n} a porcentagem gerado na CPU, no início do sistema, teremos que \textbf{n = m = 0.5}. O aumento da carga para determinada arquitetura será decidida ao longo da execução do jogo, considerando um histórico de frames por segundo.
+As requisições por novos terrenos serão adicionadas a uma fila e uma política \emph{First In, First Out} (FIFO) será utilizada para decidir qual terreno será gerado. Como é possível ver na Figura \ref{fig:geracao}, o número de filas existentes no sistema será igual ao número de vizinhos do \emph{patch} central. Dessa forma, é possível decidir quais terrenos serão gerados a partir de sua distância do \emph{patch} central.
 
 
-Tal métrica foi escolhida pelas seguintes razões:
 
-\begin{itemize}
-	\item Obter um FPS mais fluido durante a navegação é um dos principais objetivos deste trabalho.
-	\item A mesurização do tempo gasto com trabalho relacionado à parte gráfica utilizando OpenGL não é algo disponível em GPUs. A extensão \textbf{GL\_EXT\_timer\_query} \cite{timerQuery}, por exemplo, só está disponível em placas NVidia, algo que anularia a possibilidade da execução deste trabalho em placas ATI.
-	\item A utilização de chamadas como \textbf{glFlush()} para medir o tempo de renderização poderia prejudicar a performance do sistema.
-\end{itemize}
+\subsection{O Cálculo de $\alpha$}
+
+O valor da variável $\alpha$ é, atualmente, uma variável controlada manualmente pelo usuário.  A sua variação de acordo com a utilização de cada arquitetura será um tema a ser abordado em trabalhos futuros.
+
+Atualmente, a maior dificuldade para medir o tempo de geração tanto na GPU é a falta de um padrão nas extensões disponíveis em OpenGL.  extensão \textbf{GL\_EXT\_timer\_query} \cite{timerQuery}, por exemplo, só está disponível em placas NVidia, algo que anularia a possibilidade da execução deste trabalho em placas ATI.
+
+A utilização de chamadas como \textbf{glFinish()} para sincronizar a CPU e a GPU e assim medir o tempo de geração dos terrenos poderia prejudicar a performance do sistema, já que pára a execução da CPU enquanto todos os os comandos OpenGL não forem executados.
+
+Uma outra opção para a sincronização seria a extensão \textbf{GL\_NV\_fence} \cite{nvFence}, que oferece funções para sincronização semelhantes ao \textbf{glFinish()} e \textbf{glFlush()}, porém com um grau maior de controle sobre quais comandos OpenGL deverão ser executados na chamada. Mais uma vez, porém, a extensão não está disponível para placas ATI.
+
+\subsection{Geração}
+Toda a geração dos terrenos na GPU é feita através de um \emph{fragment shader}, utilizando o ruído Perlin como foi proposto em \cite{improvedPerlinNoise}. Como toda computação de \emph{shaders} fica limitada a geometrias ou texturas, foi preciso renderizar um quadrado utilizando as funções OpenGL, para que, dessa forma, fosse possível aplicar os \emph{shaders} às suas primitivas e iniciar os cálculos necessários. O resultado da geração é renderizado em um \emph{framebuffer} \emph{off-screen}, que não é exibido na tela, através da extenção FBO, que permite criar novos \emph{buffers}.
+
+O cálculo dos vetores gradientes, necessário no ruído Perlin, é feito na CPU, apenas no início do sistema, e depois é acessado no \emph{fragment shader} como uma textura 2D.
+
+Como o mapa de altura é gerado na GPU, não há qualquer tipo de perda de desempenho com a transferência entre a memória RAM e a memória da placa de vídeo. Um aspecto importante é que, durante a geração do mapa de altura, os valores das normais de cada vértice também são calculados.
+
+A geração utilizando a CPU é feita utilizando o mesmo algoritmo implementado na GPU. Como o mapa de altura gerado reside na memória principal, sua renderização dependerá da transferência para a memória da placa de vídeo.
+
+
+\subsection{Visualização}
+Com o mapa de altura gerado, o próximo passo é exibir o terreno para o usuário, que é feito de forma idêntica tanto para os terrenos gerados na GPU quanto para os gerados na CPU.
+
+O passo inicial é a geração de uma malha (conjunto de vértices) de tamanho pré-determinado, como mostra a Figura \ref{fig:malha}.
+
+\begin{figure}[h]
+	\center{\includegraphics[width=0.5\linewidth]{img/caps/malha.png}}
+	\caption{\label{fig:malha} Malha inicial para visualização dos terrenos.}
+\end{figure}
+
+A malha é gerada de tal forma que um número maior de vértices está concentrado no centro. Quanto maior a distância, menor o número de vértices presentes. Isto propicia uma maneira rápida e fácil de implementar um nível de detalhamento (quanto maior a distância do centro, menor será a necessidade de se renderizar o terreno em alta fidelidade).
+
+Como a malha é gerada apenas uma única vez (no início da execução), não é preciso criar repetidas malhas a medida que o jogador percorre o terreno. Apenas os mapas de altura de cada \emph{patch} são trocados, como mostra a Figura \ref{fig:texturas}
+
+\begin{figure}[h]
+	\center{\includegraphics[width=0.8\linewidth]{img/texturas.png}}
+	\caption{\label{fig:texturas} Movimentação da câmera para um outro \emph{patchs}.}
+\end{figure}
+
+Na Figura \ref{fig:texturas} é possível notar o deslocamento dos mapas de textura quando a câmera move para o \emph{patch} superior ao (1,1). Para que haja uma transição, uma matriz de translação, com valores iguais ao tamanho do \emph{patch}, é feita e multiplicada à matriz responsável por renderizar todas as primitivas, resultando na translação de todos os \emph{patchs}. 
+
+Este método diminuiu a necessidade de implementação de um algoritmo de nível de detalhe mais robusto. Além disso, como sabemos o número de vértices antecipadamente, a performance do aplicativo tem uma menor chance de sofrer quedas bruscas de rendimento.
 
