--- a/trunk/paper/trabalhosFuturosConclusao.tex
+++ b/trunk/paper/trabalhosFuturosConclusao.tex
@@ -1,2 +1,8 @@
 \section{Conclusão e Trabalhos Futuros}
 \label{conclusao}
+
+Os resultados obtidos na geração procedural de terrenos na GPU mostram o poder de processamento das placas gráficas, em relação às CPU. A opção de se gerar nas duas arquiteturas facilita 
+
+Este trabalho, porém, não implementou uma alternativa \emph{multi-core} para a geração procedural na CPU. Isto poderia diminuir o tempo gasto na geração. Outro aspecto que pode ser abordado no futuro é o escalonamento entre GPU e CPU, dependendo do nível de ociosidade de cada processador.
+
+O sistema foi implementado sempre tendo em mente a sua utilização acoplada a outras aplicativos. Dessa forma, adotá-lo em um simulador ou demandaria pouco esforço.
