--- a/trunk/paper/contribuicoes.tex
+++ b/trunk/paper/contribuicoes.tex
@@ -4,6 +4,6 @@
 O trabalho apresentado aqui possui as seguintes contribuições:
 
 \begin{itemize}
-	\item Propor uma plataforma de geração procedural de terrenos que faça uso tanto da CPU quanto da GPU.
-	\item Fazer um estudo quanto aos benefícios da geração procedural na CPU, na GPU, e em uma arquitetura GPU/CPU.
+	\item Propor um sistema de geração procedural de terrenos que faça uso tanto da CPU quanto da GPU.
+	\item Fazer uma comparação entre a eficiência da geração na CPU e na GPU.
 \end{itemize}
