--- a/trunk/paper/paper.bib
+++ b/trunk/paper/paper.bib
@@ -78,3 +78,46 @@
 	urlaccessdate = "25 jun. 2009",
 }
 
+@book{lsystem,
+ author = {Przemyslaw Prusinkiewicz and Aristid Lindenmayer},
+ title = {The algorithmic beauty of plants},
+ year = {1996},
+ isbn = {0-387-94676-4},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {New York, NY, USA},
+ }
+ 
+ @misc{mojoworld,
+	title = "MojoWorld Generator",
+	url = "http://www.mojoworld.org/",
+	urlaccessdate = "25 jun. 2009",
+}
+
+@ARTICLE{Chen:Street:2008,
+    author    =  {Guoning Chen and Gregory Esch and Peter Wonka and Pascal M??ller and Eugene Zhang},
+    title         =  {Interactive Procedural Street Modeling},
+    journal    =  {ACM Trans. Graph.},
+    year        =  {2008},
+    volume   =  {27},
+    number  =  {3},
+}
+
+@article{Mueller:2006:PMB,
+    author = {Pascal Muller and Peter Wonka and Simon Haegler and Andreas Ulmer and Luc Van Gool},
+    title = {Procedural Modeling of Buildings},
+    booktitle = {Proceedings of ACM SIGGRAPH 2006 / ACM Transactions on Graphics},
+    year = {2006},
+    volume = {25},
+    number = {3},
+    issn = {0730-0301},
+    pages = {614--623},
+    publisher = {ACM Press},
+    address = {New York, NY, USA},
+}
+
+ @ARTICLE{carlucio,
+	 author = {Carlúcio S. Cordeiro and Luiz Chaimowicz},
+	 title = {Parallel Lazy Amplification: Real-Time Procedural Modeling and Rendering of Multi-Terabyte Scenes on a Single PC},
+	 journal = {VII Brazilian Symposium on Computer Games and Digital Entertainment, 2008, Belo Horizonte. SBGames 2008}
+ }
+
