--- a/trunk/paper/introducao.tex
+++ b/trunk/paper/introducao.tex
@@ -1,14 +1,9 @@
 \section{Introdução}
-A geração procedural de modelos é uma área da Ciência da Computação que propõe que modelos gráficos tridimensionais (representação em polígonos de algum objeto) possam ser gerados através de rotinas e algoritmos. Tal técnica vem se tornando bastante popular nos últimos tempos, tendo em vista que, com o crescimento da indústria do entretenimento, há uma necessidade de se construir modelos cada vez maiores e com um grande nível de detalhe. A técnica de geração procedural vem então como uma alternativa à utilização do trabalho de artistas e modeladores na criação de modelos tridimensionais.
-
-A geração de terrenos é uma das vertentes da geração procedural. Diversos algoritmos \cite{proceduralApproach} foram desenvolvidos com o objetivo de gerar terrenos cada vez mais realistas 
-Terrenos gerados proceduralmente são uma fatia 
+A geração procedural de modelos é uma área da Ciência da Computação que propõe que modelos gráficos tridimensionais possam ser gerados através de rotinas e algoritmos. Tal técnica vem se tornando bastante popular nos últimos tempos, considerando que, com o crescimento da indústria do entretenimento, há uma necessidade de se construir modelos cada vez maiores e com um grande nível de detalhe. A técnica de geração procedural vem então como uma alternativa à utilização do trabalho de artistas e modeladores na criação de modelos tridimensionais.
 
 
+A área de geração procedural envolve uma pesquisa constante por algoritmos que sintetizem certos aspectos da realidade ao nosso redor, seja terrenos \cite{mojoworld}, construções \cite{Mueller:2006:PMB} ou cidades \cite{Chen:Street:2008}, ou vegetação \cite{lsystem}. Paralelo a isso, há uma outra vertente de pesquisa que busca executar tais algoritmos de modo que eles possam ser utilizados em aplicações em tempo-real.
 
+Este trabalho busca então estudar e propor um sistema de geração procedural de terrenos que utilize tanto a CPU quanto a GPU, de maneira isolada ou então combinada, com cada arquitetura responsável por uma determinada porcentagem da carga de trabalho referente à geração. Através do sistema, será possível navegar em um terreno pseudo-infinito de forma interativa e sem quedas bruscas do \emph{frame rate}.
 
-
-
-Outro fato também muito relevante atualmente são as GPUs, microprocessadores incorporados às placas de vídeo e especializados em processamento gráfico. O avanço da indústria de \emph{games} fez com que as GPUs ficassem cada vez mais rápidas, tornando-as atraentes para outras áreas da computação.
-
-O restante deste trabalho está organizado da seguinte maneira: na Seção \ref{trabalhosRelacionados} são apresentados os trabalhos relacionados. A Seção \ref{contribuicoes} mostra as principais contribuições deste trabalho. A Seção \ref{conceitosBasicos} revisa alguns conceitos pertinentes. A Seção \ref{proposta} apresenta a arquitetura proposta para a geração procedural utilizando tanto a CPU quanto a GPU e a Seção \ref{implementacao} detalha a implementação de tal arquitetura. A Seção \ref{testes} faz uma discussão sobre os testes realizados. Finalmente, a Seção \ref{conclusao} apresenta a conclusão e a perspectiva para futuros trabalhos.
+O trabalho está organizado da seguinte maneira: na Seção \ref{trabalhosRelacionados} são apresentados os trabalhos relacionados. A Seção \ref{contribuicoes} mostra as principais contribuições deste trabalho. A Seção \ref{conceitosBasicos} revisa alguns conceitos pertinentes. A Seção \ref{proposta} apresenta o sistema proposto para a geração procedural utilizando tanto a CPU quanto a GPU e a Seção \ref{implementacao} detalha sua implementação. A Seção \ref{testes} faz uma discussão sobre os testes realizados. Finalmente, a Seção \ref{conclusao} apresenta a conclusão e a perspectiva para futuros trabalhos.
