--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -72,8 +72,10 @@
 % manually specify the path to it like:
 % \documentclass[conference]{../sty/IEEEtran}
 
+%Meus packages [[fabio]]
 \usepackage[brazil]{babel}
 \usepackage[latin1]{inputenc}
+\usepackage{fixltx2e}
 
 
 
@@ -356,7 +358,7 @@
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
 %\title{Bare Demo of IEEEtran.cls for IEEECS Conferences / adapted for Sibgrapi 2009}
-\title{Geração Procedural de Terrenos Pseudo-Infinitos em Tempo-Real Utilizando Arquiteturas GPU/CPU}
+\title{Um Sistema para Geração Procedural de Terrenos Pseudo-Infinitos em Tempo-Real Utilizando Arquiteturas GPU e CPU}
 
 %------------------------------------------------------------------------- 
 % change the % on next lines to produce the final camera-ready version 
@@ -372,10 +374,10 @@
 
 \iffinal
   \author
-    {\IEEEauthorblockN{Fábio Markus N. Miranda, Luiz Chaimowicz}
-     \IEEEauthorblockA{Departamento de Ciência da Computação\\
-						UFMG\\
-						Email: fabiom@gmail.com, chaimo@dcc.ufmg.br}
+    {\IEEEauthorblockN{Autores}
+     \IEEEauthorblockA{Dept.\\
+						Univ.\\
+						Email:}
   }
 \else
   \author{Sibgrapi paper ID: \jemsid \\ }
@@ -426,9 +428,9 @@
 
 
 \begin{abstract}
-O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um modelo que utilize tanto a CPU quanto a GPU para minimizar o tempo gasto com a geração procedural de terrenos e permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
+O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utilize tanto a CPU quanto a GPU para minimizar o tempo gasto com a geração procedural de terrenos e permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
 
-Ao final, uma discussão é feita com base em testes com três modelos de geração (apenas CPU, apenas GPU, GPU e CPU), com o objetivo de expor suas vantagens e desvantagens.
+Ao final, uma comparação é feita com base em testes com três modelos de geração (apenas CPU, apenas GPU, GPU e CPU), com o objetivo de expor suas vantagens e desvantagens.
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -457,6 +459,7 @@ geração procedural; gpu; gpgpu; programação paralela
 \input{implementacao}
 \input{testes}
 \input{trabalhosFuturosConclusao}
+
 
 
 
@@ -576,7 +579,7 @@ geração procedural; gpu; gpgpu; programação paralela
 %\end{thebibliography}
 
 
-
+\input{figuras}
 
 % that's all folks
 \end{document}
