--- a/trunk/paper/implementacao.tex
+++ b/trunk/paper/implementacao.tex
@@ -28,4 +28,4 @@ A Figura \ref{fig:arquitetura} apresenta em detalhes os módulos presentes nas ca
 \end{itemize}
 
 
-As Figuras \ref{fig:heightmap}, \ref{fig:deslocamento}, \ref{fig:blend}, \ref{fig:luz} mostram o mapa de altura, o deslocamento dos vértices das malhas, a texturização dos fragmentos e, finalmente, a cena final com a iluminação.
+%As Figuras \ref{fig:heightmap}, \ref{fig:deslocamento}, \ref{fig:blend}, \ref{fig:luz} mostram o mapa de altura, o deslocamento dos vértices das malhas, a texturização dos fragmentos e, finalmente, a cena final com a iluminação.
