--- a/trunk/paper/introducao.tex
+++ b/trunk/paper/introducao.tex
@@ -2,7 +2,7 @@
 A geração procedural de modelos é uma área da Ciência da Computação que propõe que modelos gráficos tridimensionais possam ser gerados através de rotinas e algoritmos. Tal técnica vem se tornando bastante popular nos últimos tempos, considerando que, com o crescimento da indústria do entretenimento, há uma necessidade de se construir modelos cada vez maiores e com um grande nível de detalhe. A técnica de geração procedural vem então como uma alternativa à utilização do trabalho de artistas e modeladores na criação de modelos tridimensionais.
 
 
-A área de geração procedural envolve uma pesquisa constante por algoritmos que sintetizem certos aspectos da realidade ao nosso redor, seja terrenos \cite{mojoworld}, construções \cite{Mueller:2006:PMB} ou cidades \cite{Chen:Street:2008}, ou vegetação \cite{lsystem}. Paralelo a isso, há uma outra vertente de pesquisa que busca executar tais algoritmos de modo que eles possam ser utilizados em aplicações em tempo-real.
+A área de geração procedural envolve uma pesquisa constante por algoritmos que sintetizem certos aspectos da realidade ao nosso redor, seja terrenos \cite{proceduralApproach}, cidades \cite{Chen:Street:2008}, ou vegetação \cite{lsystem}. Paralelo a isso, há uma outra vertente de pesquisa que busca executar tais algoritmos de modo que eles possam ser utilizados em aplicações em tempo-real.
 
 Este trabalho busca então estudar e propor um sistema de geração procedural de terrenos que utilize tanto a CPU quanto a GPU, de maneira isolada ou então combinada, com cada arquitetura responsável por uma determinada porcentagem da carga de trabalho referente à geração. Através do sistema, será possível navegar em um terreno pseudo-infinito de forma interativa e sem quedas bruscas do \emph{frame rate}.
 
