--- a/trunk/paper/testes.tex
+++ b/trunk/paper/testes.tex
@@ -1,5 +1,17 @@
+\begin{figure*}
+	\center{\includegraphics[width=0.8\linewidth]{img/fps_single.pdf}}
+	\caption{\label{fig:fps} Gráfico com o FPS na navegação pelo mundo durante 60 segundos.}
+\end{figure*}
+
+\begin{figure*}
+	\center{\includegraphics[width=0.8\linewidth]{img/fps_multi.pdf}}
+	\caption{\label{fig:fps} Gráfico com o FPS na navegação pelo mundo durante 60 segundos.}
+\end{figure*}
+
+
 \section{Testes}
 \label{testes}
+
 
 Para verificar a eficiência das gerações na CPU e GPU, foi feito um teste que consiste na navegação por um trajeto constante durante 60 segundos. O computador utilizado foi um \emph{Core 2 Duo E7400}, com 2GB de memória \emph{RAM} e placa de vídeo \emph{ATI Radeon HD 4850} com 512MB de memória \emph{RAM}, e \emph{driver} versão 8.612. As seguintes configurações foram utilizadas para a geração procedural: 8 \emph{octaves}, \emph{lacunarity} igual a 2.5, \emph{gain} igual a 0.5,  \emph{offset} como 0.9, número de vizinhos referente ao \emph{patch} central igual a 2,  tamanho de textura 256. A resolução do programa foi de 1280 x 720.
 
